src/assets/scss/layout.scss
.masonry {
  column-count: 4;
  column-gap: 0.8em;
  @media(max-width: 1024px) {
    column-count: 3;
  }
  @media(max-width: 480px) {
    column-count: 2;
  }

  &-detail {
    column-count: 2;
    column-gap: 1em;
    @media(max-width: 480px) {
      column-count: 1;

    }
  }
}

.item { /* Masonry bricks or child elements */
  background: transparent;
  display: inline;
  width: 100%;
}

.grid {
  display: grid;

  &-cols-2-m {
    grid-template-columns: repeat(2, minmax(0, 1fr));
    @media(max-width: 480px) {
      grid-template-columns: repeat(1, minmax(0, 1fr));
    }
  }
  &-cols-3-m {
    grid-template-columns: repeat(3, minmax(0, 1fr));
    @media(max-width: 1024px) {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
    @media(max-width: 480px) {
      grid-template-columns: repeat(1, minmax(0, 1fr));
    }
  }
  &-cols-4-m{
    grid-template-columns: repeat(4, minmax(0, 1fr));
    @media(max-width: 1024px) {
      grid-template-columns: repeat(3, minmax(0, 1fr));
    }
    @media(max-width: 480px) {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
  }
}

.gap-3 {
  gap: 0.75rem;
}
.gap-2{
  gap:2rem;
}

.container {
  padding: 22rem 20% 5rem 20%;
  @media(max-width: 1024px) {
    padding: 22rem 5% 5rem 5%;
  }
  @media(max-width: 480px) {
    padding: 14rem 5% 2rem 5%;
  }
  &-header{
    padding-right: 20%;
    padding-left: 20%;
    @media(max-width: 1024px) {
      padding-right: 5%;
      padding-left: 5%;
    }
    @media(max-width: 480px) {
      padding-right:5%;
      padding-left: 5%;
    }
  }
}

.flex-row-m {
  flex-direction: row;
  @media(max-width: 480px) {
    flex-direction: column;
  }
}

.margin {
  @media(max-width: 480px) {
    margin-right: auto;
  }
}

.bottom-10 {
  bottom: 10%;
}

.right-10 {
  right: 10%;
}

.left-10{
  left:10%;
}
.ml--2{
  margin-left:-2rem;
}
.fit-content{
  min-width:fit-content;
}

